修改后的简历

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -13,22 +13,22 @@
 <div class="container">
   <div class="header">
     <div class="full-name">
-      <span class="first-name">John</span> 
-      <span class="last-name">Doe</span>
+      <span class="first-name">慧</span> 
+      <span class="last-name">慧</span>
     </div>
     <div class="contact-info">
-      <span class="email">Email: </span>
-      <span class="email-val">john.doe@gmail.com</span>
+      <span class="email">邮箱: </span>
+      <span class="email-val">11111111111111</span>
       <span class="separator"></span>
-      <span class="phone">Phone: </span>
+      <span class="phone">电话: </span>
       <span class="phone-val">111-222-3333</span>
     </div>
     
     <div class="about">
-      <span class="position">Front-End Developer </span>
+      <span class="position">软件开发</span>
       <span class="desc">
-        I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. 
-      </span>
+      	软件开发描述
+             </span>
     </div>
   </div>
    <div class="details">
@@ -37,8 +37,8 @@
       <div class="section__list">
         <div class="section__list-item">
           <div class="left">
-            <div class="name">KlowdBox</div>
-            <div class="addr">San Fr, CA</div>
+            <div class="name">HUNU1</div>
+            <div class="addr">china</div>
             <div class="duration">Jan 2011 - Feb 2015</div>
           </div>
           <div class="right">
@@ -65,13 +65,13 @@
       <div class="section__list">
         <div class="section__list-item">
           <div class="left">
-            <div class="name">Sample Institute of technology</div>
-            <div class="addr">San Fr, CA</div>
-            <div class="duration">Jan 2011 - Feb 2015</div>
+            <div class="name">HBNU</div>
+            <div class="addr">中国,china</div>
+            <div class="duration">Jan 2018 - Feb 2022</div>
           </div>
           <div class="right">
-            <div class="name">Fr developer</div>
-            <div class="desc">did This and that</div>
+            <div class="name">java开发者</div>
+            <div class="desc">做了啥!</div>
           </div>
         </div>
         <div class="section__list-item">
@@ -90,26 +90,24 @@
       
   </div>
      <div class="section">
-      <div class="section__title">Projects</div> 
+      <div class="section__title">项目</div> 
        <div class="section__list">
          <div class="section__list-item">
-           <div class="name">DSP</div>
-           <div class="text">I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.</div>
-         </div>
+           <div class="name">项目一</div>
+           <div class="text">项目一描述   </div>
          
          <div class="section__list-item">
-                    <div class="name">DSP</div>
-           <div class="text">I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. <a href="/login">link</a>
-           </div>
+                    <div class="name">项目二</div>
+           <div class="text">项目二描述  </div>
          </div>
        </div>
     </div>
      <div class="section">
-       <div class="section__title">Skills</div>
+       <div class="section__title">技能</div>
        <div class="skills">
          <div class="skills__item">
            <div class="left"><div class="name">
-             Javascript
+           javaweb
              </div></div>
            <div class="right">
                           <input  id="ck1" type="checkbox" checked/>
@@ -118,7 +116,7 @@
                           <input id="ck2" type="checkbox" checked/>
 
               <label for="ck2"></label>
-                         <input id="ck3" type="checkbox" />
+                         <input id="ck3" type="checkbox"  checked/>
 
               <label for="ck3"></label>
                            <input id="ck4" type="checkbox" />
@@ -132,7 +130,7 @@
        </div>
        <div class="skills__item">
            <div class="left"><div class="name">
-             CSS</div></div>
+             Python</div></div>
            <div class="right">
                           <input  id="ck1" type="checkbox" checked/>
 
