--- a/templates/index2.html
+++ b/templates/index2.html
@@ -66,6 +66,7 @@
           <div class="right">
             <!--<div class="name">java开发者</div>-->
             <div class="desc">描述:<br>{{y.description}}</div>
+              <p><a href="{{url_for('index')}}" target="_blank">近期作品</a></p>
           </div>
         </div>
         {%endfor%}
