--- a/templates/chartsajax.html
+++ b/templates/chartsajax.html
@@ -19,12 +19,14 @@
 </head>
 
 <body style="font-family:arial, sans-serif">
-  <div>  <h1>花萼长和花萼宽</h1>
-    <h2>请输入花的种类编号:1、2、3 来分别查看不同种类的画的花萼长和宽的散点图</h2>
-    
+  <div>  <h1>1.鸢尾花的花萼长和花萼宽</h1>
+    <h2>1.1请输入花的种类编号:1、2、3 来分别查看不同种类的画的花萼长和宽的散点图</h2>
     <input type="text" id="fname" name="fname" onchange="cb(this.value)">
     <div id="chart" class="chart"></div>
-
+<script>
+    d = {{ graphJSON | safe }} ;
+    Plotly.newPlot('chart', d, {});
+</script>
  <div id="chart3" class="chart"></div>
 
 <script>
@@ -33,8 +35,39 @@
 </script>
 
 </div>
+
 <div>
- <h1>各地区人口逐年增长图</h1>
+ <h1>1.3鸢尾花散点分布矩阵图</h1>
+    <div id="chart6" class="chart"></div>
+<script>
+    d6 = {{ graphJSON6 | safe }} ;
+    Plotly.newPlot('chart6', d6, {});
+</script>
+</div>
+
+<div>
+ <h1>1.2鸢尾花等高线分布图</h1>
+    <div id="chart8" class="chart"></div>
+<script>
+    d8 = {{ graphJSON8 | safe }} ;
+    Plotly.newPlot('chart8', d8, {});
+</script>
+</div>
+
+<div>
+ <h1>2.国家地区人均寿命和人口之间的关系</h1>
+ <h1>2.1不同地区的人均寿命</h1>
+    <div id="chart7" class="chart"></div>
+<script>
+    d7 = {{ graphJSON7 | safe }} ;
+    Plotly.newPlot('chart7', d7, {});
+</script>
+</div>
+
+
+
+<div>
+ <h1>2.2各地区人口逐年增长图</h1>
     <div id="chart1" class="chart"></div>
 <script>
     d1 = {{ graphJSON1 | safe }} ;
@@ -42,6 +75,43 @@
 </script>
 </div>
 
+<div>
+ <h1>2.3基于line_geo线型地图</h1>
+    <div id="chart9" class="chart"></div>
+<script>
+    d9 = {{ graphJSON9 | safe }} ;
+    Plotly.newPlot('chart9', d9, {});
+</script>
+</div>
+
+
+<div>
+ <h1>2.4输入年份,获取该年分的矩阵式树状结构图</h1>
+    <div id="chart10" class="chart"></div>
+<script>
+    d10 = {{ graphJSON10 | safe }} ;
+    Plotly.newPlot('chart10', d10, {});
+</script>
+</div>
+
+
+<div>
+ <h1>3.订单流水图,男女消费总账单情况</h1>
+    <div id="chart4" class="chart"></div>
+<script>
+    d4 = {{ graphJSON4 | safe }} ;
+    Plotly.newPlot('chart4', d4, {});
+</script>
+</div>
+
+<div>
+ <h1>4.2013年蒙特利尔市长选举,投票选举的结果图</h1>
+    <div id="chart5" class="chart"></div>
+<script>
+    d5 = {{ graphJSON5 | safe }} ;
+    Plotly.newPlot('chart5', d5, {});
+</script>
+</div>
 
 </body>
 
