--- a/templates/index2.html
+++ b/templates/index2.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         {%endfor%}
-        
+   
 
       </div>
     </div>
@@ -94,16 +94,16 @@
            javaweb
              </div></div>
            <div class="right">
-               <input  id="ck1" type="checkbox" checked/>
-             <label for="ck1"></label>
-               <input id="ck2" type="checkbox" checked/>
-              <label for="ck2"></label>
-               <input id="ck3" type="checkbox"  checked/>
-              <label for="ck3"></label>
-               <input id="ck4" type="checkbox" />
+			<input  id="ck1" type="checkbox" checked=false/>
+            <label for="ck1"></label>
+            <input id="ck2" type="checkbox" checked/>
+            <label for="ck2"></label>
+            <input id="ck3" type="checkbox"  checked/>
+            <label for="ck3"></label>
+            <input id="ck4" type="checkbox" />
             <label for="ck4"></label>
-              <input id="ck5" type="checkbox" />
-              <label for="ck5"></label>
+            <input id="ck5" type="checkbox" />
+            <label for="ck5"></label>
 
            </div>
          </div>
