--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@ html {
 body {
   min-height: 100%;
   background: #eee;
-  font-family: "Lato", sans-serif;
+  font-family: 华文宋体;
   font-weight: 400;
   color: #222;
   font-size: 14px;
