--- a/templates/index2.html
+++ b/templates/index2.html
@@ -33,7 +33,7 @@
   </div>
    <div class="details">
     <div class="section">
-      <div class="section__title">Experience</div>
+      <div class="section__title">经验</div>
       {%for x in person.experiences%}
       <div class="section__list">
         <div class="section__list-item">
@@ -54,7 +54,7 @@
     </div>
     
     <div class="section">
-      <div class="section__title">Education</div>
+      <div class="section__title">教育</div>
       {%for y in person.education%}
       <div class="section__list">
         <div class="section__list-item">
@@ -66,7 +66,7 @@
           <div class="right">
             <!--<div class="name">java开发者</div>-->
             <div class="desc">描述:<br>{{y.description}}</div>
-              <p><a href="{{url_for('index')}}" target="_blank">近期作品</a></p>
+              <strong><p><a href="{{url_for('index')}}" target="_blank">近期作品</a></p></strong>
           </div>
         </div>
         {%endfor%}
@@ -91,10 +91,10 @@
        <div class="skills">
          <div class="skills__item">
            <div class="left"><div class="name">
-           javaweb
+           javaweb/springmvc/jsp/servelet
              </div></div>
            <div class="right">
-			<input  id="ck1" type="checkbox" checked=false/>
+			<input  id="ck1" type="checkbox" checked/>
             <label for="ck1"></label>
             <input id="ck2" type="checkbox" checked/>
             <label for="ck2"></label>
@@ -111,7 +111,7 @@
        </div>
        <div class="skills__item">
            <div class="left"><div class="name">
-             Python</div></div>
+             Python数据分析</div></div>
            <div class="right">
                           <input  id="ck1" type="checkbox" checked/>
 
@@ -119,13 +119,32 @@
                           <input id="ck2" type="checkbox" checked/>
 
               <label for="ck2"></label>
-                         <input id="ck3" type="checkbox" />
+                         <input id="ck3" type="checkbox" checked/>
 
               <label for="ck3"></label>
                            <input id="ck4" type="checkbox" />
             <label for="ck4"></label>
                           <input id="ck5" type="checkbox" />
               <label for="ck5"></label>
+
+           </div>
+         </div>
+		 
+		          <div class="skills__item">
+           <div class="left"><div class="name">
+           sqlServer/MySql/c++
+             </div></div>
+           <div class="right">
+			<input  id="ck1" type="checkbox" checked/>
+            <label for="ck1"></label>
+            <input id="ck2" type="checkbox" checked/>
+            <label for="ck2"></label>
+            <input id="ck3" type="checkbox"  checked/>
+            <label for="ck3"></label>
+            <input id="ck4" type="checkbox" />
+            <label for="ck4"></label>
+            <input id="ck5" type="checkbox" />
+            <label for="ck5"></label>
 
            </div>
          </div>
