--- a/templates/index2.html
+++ b/templates/index2.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Sample Resume</title>
+  <title>熊的简历</title>
   <link rel="stylesheet" href="./static/css/style.css">
 
 </head>
@@ -150,16 +150,10 @@
          </div>
          
        </div>
-     <div class="section">
-     <div class="section__title">
-       Interests
-       </div>
-       <div class="section__list">
-         <div class="section__list-item">
-                  Football, programming.
-          </div>
-       </div>
-     </div>
+	   
+	    <div class="right">
+	   <a style="text-align:right;bottom:0px;margin-right:120rpx;" href="https://codepen.io/knaman2609/pen/Zbyjvv">简历参考模板<a/>
+  </div>
      </div>
   </div>
 </div>
